--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header {
     align-items: flex-end;
     align-content: center;
 
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 
 body {
