--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,18 @@
 
 header {
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    align-content: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    height: 50px;
+    margin: 0;
+    padding: 0;
 
     /* margin-bottom: 50px; */
+}
+
+h1 {
+    margin: 0;
 }
 
 body {
@@ -16,7 +23,7 @@ body {
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-image: url("images/l1_background.png");
     background-repeat: no-repeat;
