--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,33 @@
 #canvas {
-    /* width: 100%; */
+  /* width: 100%; */
 }
 
 header {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-content: flex-start;
-    height: 50px;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  height: 50px;
+  margin: 0;
+  padding: 0;
 
-    /* margin-bottom: 50px; */
+  /* margin-bottom: 50px; */
 }
 
 h1 {
-    margin: 0;
+  margin: 0;
 }
 
 body {
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    background-image: url("images/l1_background.png");
-    background-repeat: no-repeat;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-image: url("images/l4_buildings01.png"), url("images/l2_stars.png"),
+    url("images/l1_background.png");
 
+  background-repeat: no-repeat, no-repeat;
+  background-size: cover, cover;
 }
