--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-image: url("images/l2_stars.png"), url("images/l1_background.png");
+  background-image: url("images/stars.png"), url("images/l1_background.png");
 
   background-repeat: no-repeat, no-repeat;
   background-size: cover, cover;
